Update css to fix horizontal overflow in header and footer

--- a/frontend/src/css/footer.css
+++ b/frontend/src/css/footer.css
@@ -1,7 +1,6 @@
 footer {
     color: var(--color-orange);
     background-color: var(--color-black-dark);
-    width: 100vw;
     height: 100px;
 }
 
