--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -25,7 +25,7 @@ code {
 }
 
 .page-wrapper {
-  min-height: 80vh;
+  min-height: 90vh;
   margin: auto;
   max-width: 1100px;
   padding: 1rem;
@@ -44,4 +44,3 @@ a:hover {
   color: white;
   cursor: pointer;
 }
-
